--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <p>My First Website</p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Totam dolores nisi natus quo nemo quia mollitia possimus? 
+        Veritatis assumenda repudiandae architecto ut recusandae quibusdam sit,
+         voluptatum culpa fugiat autem distinctio.
+    </div>
     
 </body>
 </html>
