added second and third blog

--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
         Veritatis assumenda repudiandae architecto ut recusandae quibusdam sit,
          voluptatum culpa fugiat autem distinctio.
     </div>
-    
+    <div>
+        <p>My Second Website</p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Totam dolores nisi natus quo nemo quia mollitia possimus? 
+        Veritatis assumenda repudiandae architecto ut recusandae quibusdam sit,
+         voluptatum culpa fugiat autem distinctio.
+    </div>
+    <div>
+        <p>My Third Website</p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Totam dolores nisi natus quo nemo quia mollitia possimus? 
+        Veritatis assumenda repudiandae architecto ut recusandae quibusdam sit,
+         voluptatum culpa fugiat autem distinctio.
+    </div>
 </body>
 </html>
