added some list

--- a/index.html
+++ b/index.html
@@ -28,5 +28,17 @@
         Veritatis assumenda repudiandae architecto ut recusandae quibusdam sit,
          voluptatum culpa fugiat autem distinctio.
     </div>
+    <div>
+        <h1>Types Of Transportation</h1>
+        <ul>
+            <li>Bus</li>
+            <li>truck</li>
+            <li>Tampo</li>
+            <li>Car</li>
+            <li>Airplane</li>
+            <li>Ship</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
