--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <li>Ship</li>
         </ul>
     </div>
+    <div>
+        <h1>Image</h1>
+        <img src="Images/asus-rog-symbol-and-text-kl3vi30ovpa93jua.jpg" alt="Logo">
+    </div>
     
 </body>
 </html>
